# ui.gd
# UI ìš”ì†Œë“¤ì„ ì œì–´í•˜ëŠ” ìŠ¤í¬ë¦½íŠ¸

extends Control

# ========================================
# ë…¸ë“œ ì°¸ì¡° ë³€ìˆ˜
# ========================================
# ê¸°ì¡´ UI
@onready var money_label: Label = $TopLeftInfo/VBoxContainer/MoneyLabel
@onready var income_label: Label = $TopLeftInfo/VBoxContainer/IncomeLabel # ì¬í™œìš©: ìì› ì •ë³´ í‘œì‹œ

@onready var buy_worker_button: Button = $BottomCenterButtons/HBoxContainer/WorkerPanel/BuyWorkerButton
@onready var buy_priest_button: Button = $BottomCenterButtons/HBoxContainer/PriestPanel/BuyPriestButton
@onready var upgrade_worker_button: Button = $BottomCenterButtons/HBoxContainer/WorkerPanel/UpgradeWorkerButton
@onready var upgrade_priest_button: Button = $BottomCenterButtons/HBoxContainer/PriestPanel/UpgradePriestButton
@onready var buy_cook_button: Button = $BottomCenterButtons/HBoxContainer/CookPanel/BuyCookButton
@onready var upgrade_cook_button: Button = $BottomCenterButtons/HBoxContainer/CookPanel/UpgradeCookButton

# ğŸ†• ìƒˆë¡œìš´ UI ìš”ì†Œë“¤
@onready var efficiency_label: Label = $TopLeftInfo/VBoxContainer/EfficiencyLabel

@onready var hunger_label: Label = $TopLeftInfo/VBoxContainer/HungerContainer/HungerLabel
@onready var hunger_bar: ProgressBar = $TopLeftInfo/VBoxContainer/HungerContainer/HungerBar

@onready var fun_label: Label = $TopLeftInfo/VBoxContainer/FunContainer/FunLabel
@onready var fun_bar: ProgressBar = $TopLeftInfo/VBoxContainer/FunContainer/FunBar

# ë²„íŠ¼ ì¬í™œìš© (ì´ë¦„ì€ ê·¸ëŒ€ë¡œ ë‘ê³  ê¸°ëŠ¥ë§Œ ë³€ê²½)
@onready var buy_food_button: Button = $TopLeftInfo/VBoxContainer/BuyFoodButton # -> ë°€ íŒë§¤ ë²„íŠ¼
@onready var buy_entertainment_button: Button = $TopLeftInfo/VBoxContainer/BuyEntertainmentButton # -> ë¹µ íŒë§¤ ë²„íŠ¼

# ì„¤ì • ë²„íŠ¼ ë° íŒì—…
@onready var settings_button: Button = $SettingsButton
@onready var settings_popup: Panel = $SettingsPopup
@onready var save_and_quit_button: Button = $SettingsPopup/VBoxContainer/MarginContainer/VBox/SaveAndQuitButton

# ğŸ†• ë‚®/ë°¤ í† ê¸€ ë²„íŠ¼ (ì„ì‹œ í…ŒìŠ¤íŠ¸ìš©)
var day_night_toggle_button: Button

# ========================================
# ì´ˆê¸°í™”
# ========================================
func _ready() -> void:
	# ğŸ†• ë‚®/ë°¤ í† ê¸€ ë²„íŠ¼ ìƒì„±
	day_night_toggle_button = Button.new()
	day_night_toggle_button.text = "ğŸŒ ë‚®/ë°¤ ì „í™˜ (í…ŒìŠ¤íŠ¸)"
	day_night_toggle_button.position = Vector2(10, 10)
	day_night_toggle_button.size = Vector2(200, 40)
	add_child(day_night_toggle_button)
	day_night_toggle_button.pressed.connect(_on_day_night_toggle_pressed)
	
	# ë²„íŠ¼ ì‹œê·¸ë„ ì—°ê²°
	buy_worker_button.pressed.connect(_on_buy_worker_button_pressed)
	buy_priest_button.pressed.connect(_on_buy_priest_button_pressed)
	upgrade_worker_button.pressed.connect(_on_upgrade_worker_button_pressed)
	upgrade_priest_button.pressed.connect(_on_upgrade_priest_button_pressed)
	buy_cook_button.pressed.connect(_on_buy_cook_button_pressed)
	upgrade_cook_button.pressed.connect(_on_upgrade_cook_button_pressed)
	
	# ğŸ†• ê¸°ëŠ¥ ë³€ê²½ëœ ë²„íŠ¼ ì—°ê²°
	buy_food_button.pressed.connect(_on_sell_wheat_button_pressed)
	buy_entertainment_button.pressed.connect(_on_sell_bread_button_pressed)
	
	# ì„¤ì • ë²„íŠ¼ ì‹œê·¸ë„ ì—°ê²°
	settings_button.pressed.connect(_on_settings_button_pressed)
	save_and_quit_button.pressed.connect(_on_save_and_quit_button_pressed)
	
	print("UI ì´ˆê¸°í™” ì™„ë£Œ!")

# ========================================
# ë§¤ í”„ë ˆì„ ì—…ë°ì´íŠ¸
# ========================================
func _process(_delta: float) -> void:
	update_ui()

# ========================================
# UI ì—…ë°ì´íŠ¸ í•¨ìˆ˜
# ========================================
func update_ui() -> void:
	# í™”í í‘œì‹œ
	money_label.text = "ğŸ’° ëˆ: %.0f" % GameManager.get_money()
	
	# ğŸ†• ìì› ë° ì‹œê°„ í‘œì‹œ (IncomeLabel ì¬í™œìš©)
	var time_str = "ë‚® â˜€ï¸" if GameManager.is_daytime() else "ë°¤ ğŸŒ™"
	income_label.text = "ğŸŒ¾ ë°€: %.0f | ğŸ ë¹µ: %.0f | ì‹œê°„: %s" % [GameManager.wheat, GameManager.bread, time_str]
	
	# íš¨ìœ¨ í‘œì‹œ
	var efficiency = GameManager.get_efficiency()
	var efficiency_percent = efficiency * 100.0
	efficiency_label.text = "âš¡ íš¨ìœ¨: %.0f%%" % efficiency_percent
	
	# íš¨ìœ¨ ìƒ‰ìƒ
	if efficiency >= 0.8:
		efficiency_label.add_theme_color_override("font_color", Color(0.3, 0.8, 0.3))
	elif efficiency >= 0.5:
		efficiency_label.add_theme_color_override("font_color", Color(0.9, 0.7, 0.2))
	else:
		efficiency_label.add_theme_color_override("font_color", Color(0.9, 0.3, 0.3))
	
	# ë°°ê³ í”” ê²Œì´ì§€
	var hunger = GameManager.get_hunger()
	hunger_label.text = "ğŸš ë°°ê³ í””: %.0f/100" % hunger
	hunger_bar.value = hunger
	
	# ì¬ë¯¸ ê²Œì´ì§€
	var fun = GameManager.get_fun()
	fun_label.text = "ğŸ˜Š ì¬ë¯¸: %.0f/100" % fun
	fun_bar.value = fun
	
	# ğŸ†• ë°€ íŒë§¤ ë²„íŠ¼ (êµ¬ ìŒì‹ êµ¬ë§¤ ë²„íŠ¼)
	buy_food_button.text = "ğŸŒ¾ ë°€ íŒë§¤ (+1G)"
	if GameManager.wheat < 1.0:
		buy_food_button.disabled = true
	else:
		buy_food_button.disabled = false
	
	# ğŸ†• ë¹µ íŒë§¤ ë²„íŠ¼ (êµ¬ ì˜¤ë½ êµ¬ë§¤ ë²„íŠ¼)
	buy_entertainment_button.text = "ğŸ ë¹µ íŒë§¤ (+5G)"
	if GameManager.bread < 1.0:
		buy_entertainment_button.disabled = true
	else:
		buy_entertainment_button.disabled = false
	
	# ì¼ê¾¼ ë«í‚¨ ê³ ìš© ë²„íŠ¼
	var w_cost = GameManager.worker_cost
	if GameManager.ratkin_count == 0:
		w_cost = 0 # ì²« ê³ ìš© ë¬´ë£Œ í‘œì‹œ
	
	if GameManager.worker_count >= GameManager.max_worker_count:
		buy_worker_button.text = "ğŸ­ ì¼ê¾¼ ê³ ìš© (MAX) [%d/%d]" % [GameManager.worker_count, GameManager.max_worker_count]
		buy_worker_button.disabled = true
	else:
		buy_worker_button.text = "ğŸ­ ì¼ê¾¼ ê³ ìš© (ë¹„ìš©: %.0f) [%d/%d]" % [w_cost, GameManager.worker_count, GameManager.max_worker_count]
		if GameManager.get_money() < w_cost:
			buy_worker_button.disabled = true
		else:
			buy_worker_button.disabled = false
	
	# ì¼ê¾¼ ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼
	upgrade_worker_button.text = "â¬†ï¸ ì¼ê¾¼ ì—…ê·¸ë ˆì´ë“œ Lv.%d (ë¹„ìš©: %.0f)" % [GameManager.worker_level, GameManager.worker_upgrade_cost]
	if GameManager.get_money() < GameManager.worker_upgrade_cost or GameManager.worker_count == 0:
		upgrade_worker_button.disabled = true
	else:
		upgrade_worker_button.disabled = false
	
	# ìˆ˜ë…€ ë«í‚¨ ë²„íŠ¼
	var p_cost = GameManager.priest_cost
	if GameManager.ratkin_count == 0:
		p_cost = 0
		
	if GameManager.priest_count >= GameManager.max_priest_count:
		buy_priest_button.text = "ğŸ™ ìˆ˜ë…€ ê³ ìš© (MAX) [%d/%d]" % [GameManager.priest_count, GameManager.max_priest_count]
		buy_priest_button.disabled = true
	else:
		buy_priest_button.text = "ğŸ™ ìˆ˜ë…€ ê³ ìš© (ë¹„ìš©: %.0f) [%d/%d]" % [p_cost, GameManager.priest_count, GameManager.max_priest_count]
		if GameManager.get_money() < p_cost:
			buy_priest_button.disabled = true
		else:
			buy_priest_button.disabled = false
	
	# ìˆ˜ë…€ ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼
	upgrade_priest_button.text = "â¬†ï¸ ìˆ˜ë…€ ì—…ê·¸ë ˆì´ë“œ Lv.%d (ë¹„ìš©: %.0f)" % [GameManager.priest_level, GameManager.priest_upgrade_cost]
	if GameManager.get_money() < GameManager.priest_upgrade_cost or GameManager.priest_count == 0:
		upgrade_priest_button.disabled = true
	else:
		upgrade_priest_button.disabled = false
	
	# ìš”ë¦¬ì‚¬ ê³ ìš© ë²„íŠ¼
	var c_cost = GameManager.cook_cost
	if GameManager.ratkin_count == 0:
		c_cost = 0
		
	if GameManager.cook_count >= GameManager.max_cook_count:
		buy_cook_button.text = "ğŸ³ ìš”ë¦¬ì‚¬ ê³ ìš© (MAX) [%d/%d]" % [GameManager.cook_count, GameManager.max_cook_count]
		buy_cook_button.disabled = true
	else:
		buy_cook_button.text = "ğŸ³ ìš”ë¦¬ì‚¬ ê³ ìš© (ë¹„ìš©: %.0f) [%d/%d]" % [c_cost, GameManager.cook_count, GameManager.max_cook_count]
		if GameManager.get_money() < c_cost:
			buy_cook_button.disabled = true
		else:
			buy_cook_button.disabled = false
	
	# ìš”ë¦¬ì‚¬ ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼
	upgrade_cook_button.text = "â¬†ï¸ ìš”ë¦¬ì‚¬ ì—…ê·¸ë ˆì´ë“œ Lv.%d (ë¹„ìš©: %.0f)" % [GameManager.cook_level, GameManager.cook_upgrade_cost]
	if GameManager.get_money() < GameManager.cook_upgrade_cost or GameManager.cook_count == 0:
		upgrade_cook_button.disabled = true
	else:
		upgrade_cook_button.disabled = false

# ========================================
# ë²„íŠ¼ í´ë¦­ ì´ë²¤íŠ¸ ì²˜ë¦¬
# ========================================
func _on_buy_worker_button_pressed() -> void:
	var success = GameManager.add_worker()
	if success:
		print("UI: ì¼ê¾¼ êµ¬ë§¤ ì„±ê³µ!")

func _on_buy_priest_button_pressed() -> void:
	var success = GameManager.add_priest()
	if success:
		print("UI: ìˆ˜ë…€ êµ¬ë§¤ ì„±ê³µ!")

func _on_upgrade_worker_button_pressed() -> void:
	var success = GameManager.upgrade_worker()
	if success:
		print("UI: ì¼ê¾¼ ì—…ê·¸ë ˆì´ë“œ ì„±ê³µ!")

func _on_upgrade_priest_button_pressed() -> void:
	var success = GameManager.upgrade_priest()
	if success:
		print("UI: ìˆ˜ë…€ ì—…ê·¸ë ˆì´ë“œ ì„±ê³µ!")

func _on_buy_cook_button_pressed() -> void:
	var success = GameManager.add_cook()
	if success:
		print("UI: ìš”ë¦¬ì‚¬ êµ¬ë§¤ ì„±ê³µ!")

func _on_upgrade_cook_button_pressed() -> void:
	var success = GameManager.upgrade_cook()
	if success:
		print("UI: ìš”ë¦¬ì‚¬ ì—…ê·¸ë ˆì´ë“œ ì„±ê³µ!")

# ğŸ†• ë°€ íŒë§¤
func _on_sell_wheat_button_pressed() -> void:
	var success = GameManager.sell_wheat()
	if success:
		print("UI: ë°€ íŒë§¤ ì„±ê³µ!")

# ğŸ†• ë¹µ íŒë§¤
func _on_sell_bread_button_pressed() -> void:
	var success = GameManager.sell_bread()
	if success:
		print("UI: ë¹µ íŒë§¤ ì„±ê³µ!")

# ğŸ†• ë‚®/ë°¤ í† ê¸€ (í…ŒìŠ¤íŠ¸ìš©)
func _on_day_night_toggle_pressed() -> void:
	# ë‚®ì´ë©´ ë°¤ìœ¼ë¡œ, ë°¤ì´ë©´ ë‚®ìœ¼ë¡œ ì „í™˜
	if GameManager.is_daytime():
		GameManager.time = GameManager.DAY_LENGTH / 2.0 + 1.0  # ë°¤ìœ¼ë¡œ
		print("ğŸŒ™ ë°¤ìœ¼ë¡œ ì „í™˜")
	else:
		GameManager.time = 0.0  # ë‚®ìœ¼ë¡œ
		print("ğŸŒ ë‚®ìœ¼ë¡œ ì „í™˜")

func _on_settings_button_pressed() -> void:
	settings_popup.visible = not settings_popup.visible

func _on_save_and_quit_button_pressed() -> void:
	print("ì €ì¥ í›„ ë‚˜ê°€ê¸° í´ë¦­")
	GameManager.save_game()
	get_tree().change_scene_to_file("res://scenes/menu.tscn")
